fixed blue service tabs on mobile

--- a/src/components/ServicesPage/Services.css
+++ b/src/components/ServicesPage/Services.css
@@ -86,7 +86,9 @@
   border-bottom: 3px solid transparent;
 
    /* Override app.css button styles */
-   border-radius: 0px
+   border-radius: 0px;
+   color: black;
+   
 
 
 }
@@ -190,7 +192,7 @@
   
   .service-tab {
     padding: 15px 20px;
-
+ 
     border-bottom: 1px solid #e9ecef;
     border-right: none;
   }
@@ -216,6 +218,7 @@
   }
   .service-tab:hover{
     border-bottom: 1px solid #e9ecef;
+    color: black !important;
   }
   
   .services-pg-content {
